force-app/main/default/objects/RCA_Lookup_Table__c/RCA_Lookup_Table__c.object-meta.xml
<CustomObject>
    <label>RCA Lookup Table</label>
    <nameField>
        <displayFormat>TLT-{0000}</displayFormat>
        <label>RCA Lookup Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCA Lookup Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>