force-app/main/default/objects/RCA_Lookup_Table__c/fields/Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth__c</fullName>
    <label>Bandwidth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>