force-app/main/default/objects/RCA_Lookup_Table__c/fields/Bandwidth_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Capacity__c</fullName>
    <label>Bandwidth Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>