force-app/main/default/objects/RCA_Lookup_Table__c/fields/Bandwidth_Capacity_Item__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Capacity_Item__c</fullName>
    <label>Bandwidth Capacity Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>