force-app/main/default/objects/RCA_Lookup_Table__c/fields/Parent_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Value__c</fullName>
    <label>Parent Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>