force-app/main/default/objects/RCA_Lookup_Table__c/fields/ParentSalesTransactionItem__c.field-meta.xml
<CustomField>
    <fullName>ParentSalesTransactionItem__c</fullName>
    <label>Parent Sales Transaction Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>