force-app/main/default/objects/RCA_Lookup_Table__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RCA Lookup Tables</relationshipLabel>
    <relationshipName>RCA_Lookup_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>