force-app/main/default/objects/RCA_Lookup_Table__c/fields/Product_Selling_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Selling_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Selling Model</label>
    <referenceTo>ProductSellingModel</referenceTo>
    <relationshipLabel>RCA Lookup Tables</relationshipLabel>
    <relationshipName>RCA_Lookup_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>