force-app/main/default/objects/RCA_Lookup_Table__c/fields/SalesTransactionItemParent__c.field-meta.xml
<CustomField>
    <fullName>SalesTransactionItemParent__c</fullName>
    <label>Sales Transaction Item Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>