force-app/main/default/objects/RCA_Lookup_Table__c/fields/Subscription_Term_Item__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term_Item__c</fullName>
    <label>Subscription Term Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>