force-app/main/default/objects/RCA_Lookup_Table__c/fields/Tier_Value__c.field-meta.xml
<CustomField>
    <fullName>Tier_Value__c</fullName>
    <label>Tier Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>