force-app/main/default/objects/RCA_Lookup_Table__c/fields/Tier_Value_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tier_Value_Percent__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Tier Value Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>