force-app/main/default/objects/RCA_Lookup_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bandwidth__c</columns>
    <columns>Term__c</columns>
    <columns>Price__c</columns>
    <columns>Tier_Type__c</columns>
    <columns>Tier_Value_Percent__c</columns>
    <columns>Tier_Value__c</columns>
    <columns>Subscription_Term__c</columns>
    <columns>Bandwidth_Capacity__c</columns>
    <columns>Bandwidth_Capacity_Item__c</columns>
    <columns>Subscription_Term_Item__c</columns>
    <columns>SalesTransactionItemParent__c</columns>
    <columns>ParentSalesTransactionItem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>